<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_watchtower"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/huntingTeamAfterLoginActivity"
            android:icon="@drawable/ic_groups_24px"
            android:title="@string/menu_huntingteam" />

    </group>

</menu>