<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/cool_light_green"
    tools:context=".huntingteam.activity.HuntingTeamActivity">


    <TextView
        android:id="@+id/textViewHuntingTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="95dp"
        android:gravity="center"
        android:text="@string/hunting_team_name_label"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewHuntingTeamConnectionCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="125dp"
        android:text="@string/hunting_team_connection_code_label"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textViewHuntingTeamName" />

    <Button
        android:id="@+id/buttonHuntingTeamReturn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="154dp"
        android:backgroundTint="@color/cool_yellow"
        android:onClick="onClickReturn"
        android:text="@string/hunting_team_button_return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHuntingTeamChangeTeam" />

    <Button
        android:id="@+id/buttonHuntingTeamLeaveTeam"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/cool_pink"
        android:onClick="onClickLeaveTeam"
        android:text="@string/hunting_team_button_leave_team"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonHuntingTeamMembers"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="141dp"
        android:backgroundTint="@color/cool_gray"
        android:onClick="onClickMembers"
        android:text="@string/hunting_team_button_members"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHuntingTeamConnectionCode" />

    <Button
        android:id="@+id/buttonHuntingTeamChangeTeam"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="158dp"
        android:onClick="onClickChangeTeam"
        android:text="@string/hunting_team_button_change_team"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHuntingTeamCreate" />

    <Button
        android:id="@+id/buttonHuntingTeamCreate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="147dp"
        android:onClick="onClickCreateTeam"
        android:text="@string/hunting_team_button_create_team"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button7"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClickJoinTeam"
        android:text="@string/after_login_hunting_join"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHuntingTeamMembers" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginTop="16dp"
        android:text="@string/teamCode"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewHuntingTeamConnectionCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHuntingTeamName" />

</androidx.constraintlayout.widget.ConstraintLayout>