<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/xlent_background"
    tools:context=".authentication.activity.RegisterActivity">

    <EditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="356dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPhoneNumber" />

    <EditText
        android:id="@+id/editTextRegisterPhoneNumber"
        android:layout_width="356dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/register_phonenumber"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterEmail"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/editTextRegisterFirstName"
        android:layout_width="356dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/register_firstname"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRegisterCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="cancelButton"
        android:text="@string/register_cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:backgroundTint="@color/xlent_pink_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegisterRegister" />

    <Button
        android:id="@+id/buttonRegisterRegister"
        android:layout_width="256dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:editable="false"
        android:onClick="onClickRegisterUser"
        android:text="@string/register_register"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:backgroundTint="@color/xlent_yellow_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRegisterGDPR" />

    <EditText
        android:id="@+id/editTextRegisterEmail"
        android:layout_width="356dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterLastName" />

    <EditText
        android:id="@+id/editTextRegisterLastName"
        android:layout_width="356dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/register_lastname"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterFirstName" />

    <CheckBox
        android:id="@+id/checkBoxRegisterEULA"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:onClick="onCheckBoxClicked"
        android:text="@string/register_eula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterRepeatPassword" />

    <CheckBox
        android:id="@+id/checkBoxRegisterGDPR"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:onClick="onCheckBoxClicked"
        android:text="@string/register_gdpr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRegisterEULA" />

    <EditText
        android:id="@+id/editTextRegisterRepeatPassword"
        android:layout_width="356dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/register_repeat_password"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPassword" />

    <ProgressBar
        android:id="@+id/progressBarRegisterUser"
        style="?android:attr/progressBarStyle"
        android:layout_width="110dp"
        android:layout_height="93dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>